[gd_scene load_steps=4 format=3 uid="uid://l7rd14u5o0hj"]

[ext_resource type="Script" path="res://Scripts/menu_script.gd" id="1_bba2d"]
[ext_resource type="Texture2D" uid="uid://dr2q5ebiklem8" path="res://letterIcon_FruitRush3.png" id="2_pe71t"]
[ext_resource type="FontFile" uid="uid://4ecp7joovjcb" path="res://Assets/fonts/namaku.regular.ttf" id="2_tdyvm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bba2d")

[node name="LetterIconFruitRush" type="Sprite2D" parent="."]
position = Vector2(397, 172)
scale = Vector2(0.598319, 0.598319)
texture = ExtResource("2_pe71t")

[node name="menuText" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartLabel" type="RichTextLabel" parent="menuText"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 49.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_tdyvm")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]press any button"
fit_content = true

[node name="Version" type="RichTextLabel" parent="menuText"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = 27.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_tdyvm")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[right]v0.01"
